# CRM

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: e5d46d222643_.py
api/views/: __init__.py  interactions.py  leads.py  operators.py  sources.py
core/: config.py  database.py
core/models/: __init__.py  base.py  interaction.py  lead.py  operator.py  source.py  source_operator.py
core/repository/: base_repository.py  interaction_repository.py  lead_repository.py  operator_repository.py  source_operator_repository.py  source_repository.py
core/schemas/: interaction.py  lead.py  operator.py  source.py  source_operator.py
core/services/: assigment_service.py  interaction_service.py  lead_service.py  operator_service.py  source_service.py
